--- a/Styles/Apóyanos.css
+++ b/Styles/Apóyanos.css
@@ -7,3 +7,41 @@
 body {
     background-color: #ededed;
 }
+
+.contact--general0 {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 120px;
+}
+
+.a-2 {
+    grid-column: 2/3;
+    place-self: center center;
+    text-decoration: none;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 900;
+    color: blue;
+    letter-spacing: 3px;
+    font-size: 30px;
+}
+
+.a-2:hover {
+    color: brown;
+
+}
+
+.contact--general1 {
+    display: grid;
+    position: relative;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 100px 1fr 100px;
+    height: 100%;
+}
+
+.contact--general1-p {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    place-self: center center;
+    padding: 100px 0;
+}
