--- a/Styles/Apóyanos.css
+++ b/Styles/Apóyanos.css
@@ -12,7 +12,11 @@ body {
     display: grid;
     width: 100%;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 120px;
+    grid-template-rows: 70px;
+    background-color: #e3e7ec;
+    -webkit-box-shadow: 0px 9px 11px -6px rgba(0,0,0,0.76);
+    -moz-box-shadow: 0px 9px 11px -6px rgba(0,0,0,0.76);
+    box-shadow: 0px 9px 11px -6px rgba(0,0,0,0.76);
 }
 
 .a-2 {
@@ -23,7 +27,7 @@ body {
     font-weight: 900;
     color: blue;
     letter-spacing: 3px;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .a-2:hover {
@@ -39,8 +43,16 @@ body {
     height: 100%;
 }
 
-.contact--general1-p {
+.contact--general1-img {
     grid-row: 2/3;
+    grid-column: 2/3;
+    width: 200px;
+    filter: contrast(1.2);
+    place-self: center center;
+}
+
+.contact--general1-p {
+    grid-row: 1/2;
     grid-column: 2/3;
     place-self: center center;
     padding: 100px 0;
